--- a/appstatus.json
+++ b/appstatus.json
@@ -1,4 +1,4 @@
 {
   "enabled": true,
-  "message": "Sorun var by."
+  "message": "Modül problemi/geçersiz statü... Program yapımcısı ile görüşün."
 }
